[gd_scene load_steps=2 format=3 uid="uid://6cuumd0272vp"]

[ext_resource type="Script" path="res://Scenes/UI/GameUI/game_ui.gd" id="1_g22l7"]

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_g22l7")

[node name="PauseButton" type="Button" parent="."]
offset_right = 8.0
offset_bottom = 8.0
text = "Пауза
"

[node name="PauseMenu" type="Panel" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Продолжить
"

[node name="SettingsButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Настройки
"

[node name="MainMenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Выход в главное меню
"

[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
